--- a/src/app/ui/features/tasks/list/tasks-list.component.html
+++ b/src/app/ui/features/tasks/list/tasks-list.component.html
@@ -9,6 +9,7 @@
         Nueva Tarea
       </button>
     </div>
-    <app-drag-drop></app-drag-drop>
+    <app-drag-drop (clickEventOpenModal)="openModalAssign($event)" (clickEvent)="OnUpdateStatus($event)" [toAssign]="toAssign" [pending]="pending" [inProcess]="inProcess"
+      [completed]="completed"></app-drag-drop>
   </mat-card-content>
 </mat-card>
