--- a/src/app/ui/features/tasks/drag-drop/drag-drop.component.html
+++ b/src/app/ui/features/tasks/drag-drop/drag-drop.component.html
@@ -1,4 +1,4 @@
-<div class="example-container">
+<div class="example-container" *ngIf="enabledToassign">
   <h2>Sin Asignar</h2>
   <div
     cdkDropList
